--- a/flex.html
+++ b/flex.html
@@ -26,7 +26,7 @@
     <div class="footer1 text">footer</div>
 
 
-    <button><a href="./grid.html">Go to grid</a></button>
+    <button><a href="./index.html">Go to grid</a></button>
 
     
 </body>
